guava自带的布隆过滤器

--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -122,6 +122,13 @@
             <version>2.2.1.RELEASE</version>
         </dependency>
 
+        <!--使用guava自带的布隆过滤器-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.0-jre</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
