--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -129,6 +129,14 @@
             <version>28.0-jre</version>
         </dependency>
 
+        <!-- 使用ClassScanner类 -->
+        <dependency>
+            <groupId>org.jodd</groupId>
+            <artifactId>jodd-bean</artifactId>
+            <version>5.0.13</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
