--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -177,6 +177,13 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!--必须放在最后-->
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+
 
     </dependencies>
 
