--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -8,10 +8,10 @@
         <version>2.2.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.alan</groupId>
+    <groupId>my-code</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>my-code</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
