--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -155,7 +155,6 @@
         </dependency>
 
 
-
         <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
@@ -186,11 +185,18 @@
 
 
         <!-- tk.mybatis -->
+
         <dependency>
             <groupId>tk.mybatis</groupId>
-            <artifactId>mapper</artifactId>
-            <version>4.1.5</version>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.0.2</version>
         </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>tk.mybatis</groupId>-->
+        <!--            <artifactId>mapper</artifactId>-->
+        <!--            <version>4.1.5</version>-->
+        <!--        </dependency>-->
 
 
     </dependencies>
@@ -247,6 +253,26 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <!--配置resource 主要用于加载properties等相关后缀的文件-->
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>src/main/resources</directory>-->
+<!--                <includes>-->
+<!--                    <include>**/*.properties</include>-->
+<!--                    <include>**/*.xml</include>-->
+<!--                    <include>**/*.tld</include>-->
+<!--                </includes>-->
+<!--                <filtering>false</filtering>-->
+<!--            </resource>-->
+<!--            <resource>-->
+<!--                <directory>src/main/java</directory>-->
+<!--                <excludes>-->
+<!--                    <exclude>**/*.java</exclude>-->
+<!--                </excludes>-->
+<!--            </resource>-->
+<!--        </resources>-->
+
     </build>
 
 </project>
