--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -60,9 +60,16 @@
         <!--集成swagger结束-->
 
 
-        <!--        &lt;!&ndash;  lombok 主要用于@data @slf4j的使用&ndash;&gt;-->
-        <!--        <dependency>-->
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <!--devtools热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.2.4.RELEASE</version>
+        </dependency>
+
+
+
+        <!--  lombok 主要用于@data @slf4j的使用-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -155,7 +162,7 @@
         </dependency>
 
 
-        <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+        <!-- thymeleaf -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
@@ -191,13 +198,6 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.0.2</version>
         </dependency>
-
-        <!--        <dependency>-->
-        <!--            <groupId>tk.mybatis</groupId>-->
-        <!--            <artifactId>mapper</artifactId>-->
-        <!--            <version>4.1.5</version>-->
-        <!--        </dependency>-->
-
 
     </dependencies>
 
@@ -255,23 +255,23 @@
         </plugins>
 
         <!--配置resource 主要用于加载properties等相关后缀的文件-->
-<!--        <resources>-->
-<!--            <resource>-->
-<!--                <directory>src/main/resources</directory>-->
-<!--                <includes>-->
-<!--                    <include>**/*.properties</include>-->
-<!--                    <include>**/*.xml</include>-->
-<!--                    <include>**/*.tld</include>-->
-<!--                </includes>-->
-<!--                <filtering>false</filtering>-->
-<!--            </resource>-->
-<!--            <resource>-->
-<!--                <directory>src/main/java</directory>-->
-<!--                <excludes>-->
-<!--                    <exclude>**/*.java</exclude>-->
-<!--                </excludes>-->
-<!--            </resource>-->
-<!--        </resources>-->
+        <!--        <resources>-->
+        <!--            <resource>-->
+        <!--                <directory>src/main/resources</directory>-->
+        <!--                <includes>-->
+        <!--                    <include>**/*.properties</include>-->
+        <!--                    <include>**/*.xml</include>-->
+        <!--                    <include>**/*.tld</include>-->
+        <!--                </includes>-->
+        <!--                <filtering>false</filtering>-->
+        <!--            </resource>-->
+        <!--            <resource>-->
+        <!--                <directory>src/main/java</directory>-->
+        <!--                <excludes>-->
+        <!--                    <exclude>**/*.java</exclude>-->
+        <!--                </excludes>-->
+        <!--            </resource>-->
+        <!--        </resources>-->
 
     </build>
 
