--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -68,7 +68,6 @@
         </dependency>
 
 
-
         <!--  lombok 主要用于@data @slf4j的使用-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -152,6 +151,25 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+
+        <!-- zookeeper开始 -->
+        <!-- zookeeper -->
+
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.14</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.10</version>
+        </dependency>
+
+        <!--zookeeper 结束-->
 
 
         <!-- 对象布局的工具类  https://mvnrepository.com/artifact/org.openjdk.jol/jol-core -->
