--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -154,7 +154,6 @@
 
 
         <!-- zookeeper开始 -->
-        <!-- zookeeper -->
 
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
@@ -172,7 +171,24 @@
         <!--zookeeper 结束-->
 
 
-        <!-- 对象布局的工具类  https://mvnrepository.com/artifact/org.openjdk.jol/jol-core -->
+        <!--elasticsearch 开始-->
+<!--        <dependency>-->
+<!--            <groupId>org.elasticsearch</groupId>-->
+<!--            <artifactId>elasticsearch</artifactId>-->
+<!--            <version>7.1.1</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.elasticsearch.client</groupId>-->
+<!--            <artifactId>elasticsearch-rest-high-level-client</artifactId>-->
+<!--            <version>7.1.1</version>-->
+<!--        </dependency>-->
+
+
+        <!--elasticsearch 结束-->
+
+
+        <!-- 对象布局的工具类 -->
         <dependency>
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
