--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -8,6 +8,8 @@
         <version>2.2.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+
     <groupId>my-code</groupId>
     <artifactId>pom</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -16,6 +18,9 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
+        <!--布局功能的支持程序 thymeleaf3主程序 layout2以上版本-->
+        <thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>
     </properties>
 
     <dependencies>
@@ -198,9 +203,11 @@
 
         <!-- thymeleaf -->
         <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
-            <version>3.0.11.RELEASE</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <!--            <groupId>org.thymeleaf</groupId>-->
+            <!--            <artifactId>thymeleaf</artifactId>-->
+            <!--            <version>3.0.11.RELEASE</version>-->
         </dependency>
 
         <!--必须放在最后 -->
@@ -231,6 +238,13 @@
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.0.2</version>
+        </dependency>
+
+        <!--webjars -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.3.1</version>
         </dependency>
 
     </dependencies>
