--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -210,6 +210,9 @@
             <!--            <version>3.0.11.RELEASE</version>-->
         </dependency>
 
+
+
+
         <!--必须放在最后 -->
         <dependency>
             <groupId>com.fasterxml.uuid</groupId>
@@ -245,6 +248,12 @@
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>3.3.1</version>
+        </dependency>
+
+        <!--启动springboot 缓存-->
+        <dependency>
+            <groupId>javax.cache</groupId>
+            <artifactId>cache-api</artifactId>
         </dependency>
 
     </dependencies>
