--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -268,6 +268,21 @@
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.12</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/asm/asm-all -->
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm-all</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
