提交rabbitmq 相关代码

--- a/springboot-pro/src/main/resources/application.yml
+++ b/springboot-pro/src/main/resources/application.yml
@@ -25,7 +25,11 @@ spring:
     password: guest
 
 
-#es 配置
+
+  main:
+    allow-bean-definition-overriding: true
+
+
 elasticsearch:
   host: 192.168.1.6
   port: 9200
