--- a/springboot-pro/src/main/resources/application.yml
+++ b/springboot-pro/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     name: localhost
   #数据库相关配置
   datasource:
-    url: jdbc:mysql://192.168.1.6:3307/boot_user
+    url: jdbc:mysql://192.168.1.6:3307/xt
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
