--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -230,6 +230,22 @@
         </dependency>
 
 
+
+        <!-- 分页 -->
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>0.9.5</version>
+        </dependency>
+
+        <!-- 分页 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.8</version>
+        </dependency>
+
+
         <!-- tk.mybatis -->
 
         <dependency>
