--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -316,6 +316,12 @@
             <version>3.3.1</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-test</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
 
     </dependencies>
 
