--- a/springboot-pro/src/main/resources/application.yml
+++ b/springboot-pro/src/main/resources/application.yml
@@ -30,6 +30,11 @@ spring:
     allow-bean-definition-overriding: true
 
 
+  thymeleaf:
+    prefix: classpath:/templates
+    suffix: .html
+
+
 elasticsearch:
   host: 192.168.1.6
   port: 9200
@@ -95,6 +100,8 @@ mybatis:
 
 logging:
   file: springboot.log
+
+
 
 
 
