--- a/springboot-pro/pom.xml
+++ b/springboot-pro/pom.xml
@@ -296,6 +296,13 @@
             <version>4.0.1</version>
         </dependency>
 
+        <!--http工具-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-http</artifactId>
+            <version>5.1.3</version>
+        </dependency>
+
 
 
         <!-- ftpclient -->
